[package]
name = "recluse"
version = "0.1.0"
edition = "2024"
authors = ["Misza <misza@misza.net>"]
description = "A web crawler framework for Rust"
license = "MIT"
readme = "README.md"

exclude = [
    "examples/*",
    ".gitignore"
]

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest", "dep:serde", "dep:serde_json"]

[dependencies]
log = "0.4.27"
reqwest = { version = "0.12.22", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.141", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["sync"] }
tower = { version = "0.5.2", features = ["util"] }

[dev-dependencies]
# These are used only in examples
anyhow = "1.0.98"
clap = "4.5.41"
colog = "1.3.0"
scraper = "0.23.1"
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }

[[example]]
name = "01_quotes"
path = "examples/01_quotes/main.rs"
required-features = ["reqwest"]