[package]
name = "recluse"
version = "0.1.0"
edition = "2024"
authors = ["Misza <misza@misza.net>"]
description = "A web crawler framework for Rust"
license = "MIT"
readme = "README.md"

exclude = [
    "examples/*",
    ".gitignore"
]

[features]
default = []
full = ["limit", "reqwest"]

limit = ["dep:leaky-bucket"]
reqwest = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:url"]

[dependencies]
leaky-bucket = { version = "1.1.2", optional = true }
log = "0.4.27"
reqwest = { version = "0.12.22", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.141", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["sync"] }
tower = { version = "0.5.2", features = ["util", "filter"] }
url = { version = "2.5.4", optional = true }

[dev-dependencies]
# These are used only in examples
anyhow = "1.0.98"
clap = "4.5.41"
colog = "1.3.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }

[package.metadata.docs.rs]
rustdoc-args = [
    "--extern-html-root-url", "serde=https://docs.rs/serde/latest/serde/",
    "--extern-html-root-url", "tokio=https://docs.rs/tokio/latest/tokio/",
    "--extern-html-root-url", "tower=https://docs.rs/tower/latest/tower/",
]

[[example]]
name = "01_quotes"
path = "examples/01_quotes/main.rs"
required-features = ["reqwest"]

[[example]]
name = "02_pokeapi"
path = "examples/02_pokeapi/main.rs"
required-features = ["reqwest"]
